--- a/package.json
+++ b/package.json
@@ -11,49 +11,49 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-polyfill": "^6.23.0",
-    "element-ui": "1.3.1",
-    "vue": "^2.3.2",
-    "vue-core-image-upload": "2.1.11",
-    "vue-datasource": "1.0.9",
-    "vue-quill-editor": "2.1.6",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1",
-    "vue-schart": "^0.1.2",
-    "vue-simplemde": "0.3.8"
+    "babel-polyfill": "^6.26.0",
+    "element-ui": "^1.4.12",
+    "vue": "^2.5.13",
+    "vue-core-image-upload": "^2.3.10",
+    "vue-datasource": "^1.0.10",
+    "vue-quill-editor": "^2.3.3",
+    "vue-resource": "^1.3.5",
+    "vue-router": "^2.8.1",
+    "vue-schart": "^0.1.4",
+    "vue-simplemde": "^0.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.26.0",
     "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.28.0",
+    "connect-history-api-fallback": "^1.5.0",
+    "css-loader": "^0.28.8",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
+    "function-bind": "^1.1.1",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "opn": "^4.0.2",
-    "ora": "^1.2.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
+    "ora": "^1.3.0",
+    "semver": "^5.4.1",
+    "shelljs": "^0.7.8",
+    "url-loader": "^0.5.9",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.3.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^2.7.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-merge": "^4.1.1"
   },
   "engines": {
     "node": ">= 4.0.0",
