--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.6",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.3",
     "vue-core-image-upload": "^2.4.11",
     "vue-datasource": "^2.0.7",
     "vue-quill-editor": "^3.0.6",
